objects/ssot__EngmtInsightKnwlgArticleVersion__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CoverageScorePercent__c</fullName>
        <label>Coverage Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CoverageScoreReason__c</fullName>
        <label>Coverage Score Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DedupEngmtAnalysisTextInsightId__c</fullName>
        <label>Dedup Engagement Analysis Text Insight</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementAnalysisTextInsightId__c</fullName>
        <label>Engagement Analysis Text Insight</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Engmt Insight Knwlg Article Ver Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InsightExcerptText__c</fullName>
        <label>Insight Excerpt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__KnowledgeArticleVersionId__c</fullName>
        <label>Knowledge Article Version</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuestionsText__c</fullName>
        <label>Questions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RepresentativeInsightText__c</fullName>
        <label>Representative Insight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>